Improved the Quarkus benchmark and added a pgclient variant