@@ -1,13 +1,11 @@
 package io.quarkus.benchmark.resource;
 
-import java.util.Map;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionStage;
-
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
+import java.util.Collections;
+import java.util.Map;
 
 @Path("/json")
 public class JsonResource {
@@ -16,7 +14,8 @@ public class JsonResource {
 
     @GET
     @Produces(MediaType.APPLICATION_JSON)
-    public CompletionStage<Map<String, String>> json() {
-        return CompletableFuture.supplyAsync(() -> Map.of(MESSAGE, HELLO));
+    public Map<String, String> json() {
+        return Collections.singletonMap( MESSAGE, HELLO );
     }
 }
+
